services/setup-service/src/main/resources/k8s/reporting-namespace/reporting-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reporting-service-ingress
  namespace: reporting
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - host: api.gindho.com
    http:
      paths:
      - path: /reporting
        pathType: Prefix
        backend:
          service:
            name: reporting-service
            port:
              number: 9028
